added session + error if no valid folder

--- a/source/WpfSamples/UserPresenceWpf/MainWindow.xaml
+++ b/source/WpfSamples/UserPresenceWpf/MainWindow.xaml
@@ -51,15 +51,17 @@
 
         <Grid HorizontalAlignment="Left" Height="100" Margin="57,45,0,0" VerticalAlignment="Top" Width="181" Grid.Row="1">
             <TextBlock Name="gazeDataTextX" HorizontalAlignment="Left" Margin="4,15,0,0" TextWrapping="Wrap" Text="Gaze X-coordinate: " VerticalAlignment="Top"><Run Text="{Binding gazeX}" /></TextBlock>
-            <TextBlock x:Name="gazeDataTextY" HorizontalAlignment="Left" Margin="4,31,0,0" TextWrapping="Wrap" Text="Gaze Y-coordinate: " VerticalAlignment="Top"><Run Text="{Binding gazeY}" /></TextBlock>
-            <TextBlock x:Name="gazeDataTextTime" HorizontalAlignment="Left" Margin="4,47,0,0" TextWrapping="Wrap" Text="Time" VerticalAlignment="Top">
+            <TextBlock x:Name="gazeDataTextY" HorizontalAlignment="Left" Margin="4,38,0,0" TextWrapping="Wrap" Text="Gaze Y-coordinate: " VerticalAlignment="Top"><Run Text="{Binding gazeY}" /></TextBlock>
+            <TextBlock x:Name="gazeDataTextTime" HorizontalAlignment="Left" Margin="4,59,0,0" TextWrapping="Wrap" Text="Time" VerticalAlignment="Top">
                 <Run Text="{Binding time}" />
             </TextBlock>
         </Grid>
-        <Button Content="Choose folder" HorizontalAlignment="Left" Margin="57,291,0,0" Grid.Row="1" VerticalAlignment="Top" Width="97" Click="Button_Click"/>
+        <Button Content="Choose folder" HorizontalAlignment="Left" Margin="57,291,0,0" Grid.Row="1" VerticalAlignment="Top" Width="97" Click="choose_folder"/>
         <TextBlock x:Name="savingDataPathLabel" HorizontalAlignment="Left" Margin="57,258,0,0" Grid.Row="1" TextWrapping="Wrap" Text="Saving data to:" VerticalAlignment="Top"/>
         <TextBox x:Name="savingDataPath"  HorizontalAlignment="Left" Height="23" Margin="57,334,0,0" Grid.Row="1" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="303"/>
-        <Button x:Name="startRecording" Content="Record data" HorizontalAlignment="Left" Margin="125,413,0,0" Grid.Row="1" VerticalAlignment="Top" Width="141" Click="Button_Click_1" Height="44"/>
+        <Button x:Name="startRecording" Content="Record data" HorizontalAlignment="Left" Margin="125,413,0,0" Grid.Row="1" VerticalAlignment="Top" Width="141" Click="record_data" Height="44"/>
+        <TextBox  x:Name="session"  HorizontalAlignment="Left" Height="23" Margin="111,199,0,0" Grid.Row="1" TextWrapping="Wrap" Text="Default" VerticalAlignment="Top" Width="120"/>
+        <Label Content="Session" HorizontalAlignment="Left" Margin="57,195,0,0" Grid.Row="1" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
