--- a/source/WpfSamples/UserPresenceWpf/MainWindow.xaml
+++ b/source/WpfSamples/UserPresenceWpf/MainWindow.xaml
@@ -26,7 +26,9 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <GroupBox Header="GroupBox" HorizontalAlignment="Left" Margin="31,174,0,0" Grid.Row="1" VerticalAlignment="Top" Height="219" Width="337"/>
+        <GroupBox Header="Log File" HorizontalAlignment="Left" Margin="31,174,0,0" Grid.Row="1" VerticalAlignment="Top" Height="219" Width="337">
+            <Slider  x:Name="frequencySlider" HorizontalAlignment="Left" Margin="22,68,0,0" VerticalAlignment="Top" Width="217" ValueChanged="Slider_ValueChanged" Maximum="30" Minimum="1" TickFrequency="5" Value="5" SmallChange="5" LargeChange="5" IsSnapToTickEnabled="True"/>
+        </GroupBox>
 
         <GroupBox Header="Information" HorizontalAlignment="Left" Margin="31,31,0,0" Grid.Row="1" VerticalAlignment="Top" Height="138" Width="318"/>
 
@@ -64,12 +66,13 @@
                    Visibility="{Binding IsTrackingGazeSupported, Converter={StaticResource VisibilityConverter}}"/>
             -->
         </Grid>
-        <Button Content="Choose folder" HorizontalAlignment="Left" Margin="57,291,0,0" Grid.Row="1" VerticalAlignment="Top" Width="97" Click="choose_folder"/>
-        <TextBlock x:Name="savingDataPathLabel" HorizontalAlignment="Left" Margin="57,258,0,0" Grid.Row="1" TextWrapping="Wrap" Text="Saving data to:" VerticalAlignment="Top"/>
+        <Button Content="Choose folder" HorizontalAlignment="Left" Margin="57,309,0,0" Grid.Row="1" VerticalAlignment="Top" Width="97" Click="choose_folder"/>
+        <TextBlock x:Name="savingDataPathLabel" HorizontalAlignment="Left" Margin="57,288,0,0" Grid.Row="1" TextWrapping="Wrap" Text="Saving data to:" VerticalAlignment="Top"/>
         <TextBox x:Name="savingDataPath"  HorizontalAlignment="Left" Height="23" Margin="57,334,0,0" Grid.Row="1" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="273"/>
         <Button x:Name="startRecording" Content="Record data" HorizontalAlignment="Left" Margin="125,413,0,0" Grid.Row="1" VerticalAlignment="Top" Width="141" Click="record_data" Height="44"/>
         <TextBox  x:Name="session"  HorizontalAlignment="Left" Height="23" Margin="111,199,0,0" Grid.Row="1" TextWrapping="Wrap" Text="Default" VerticalAlignment="Top" Width="120"/>
         <Label Content="Session" HorizontalAlignment="Left" Margin="57,195,0,0" Grid.Row="1" VerticalAlignment="Top"/>
+        <Label x:Name="frequencyLabel" Content="Frequency (Hz): 5" HorizontalAlignment="Left" Margin="57,226,0,0" Grid.Row="1" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
